tests/sksl/errors/OpaqueTypeInStruct.glsl
### Compilation failed:

error: 1: opaque type 'sampler' is not permitted in a struct
1 error
